[package]
name = "echor"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Ellis"]
description = "Echo the STRINGs to standard output"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
